--- a/documentation.html
+++ b/documentation.html
@@ -21,10 +21,10 @@
   </ol>
   <p >
     The shiny application uses the Carbon-dioxide dataset available in base R package. The CO2 uptake of six plants from Quebec and six plants from Mississippi was measured at several levels of ambient CO2 concentration. Half the plants of each type were chilled overnight before the experiment was conducted.Here's the link to the dataset:
-    <a href="https://stat.ethz.ch/R-manual/R-devel/library/datasets/html/zCO2.html">CO2 dataset</a>
+    <a href="https://stat.ethz.ch/R-manual/R-devel/library/datasets/html/zCO2.html">CO2</a>
     </p>
     <p>
-    The first tab, Plot, makes a scatter plot using 5 input variables namely Plant, Type, Treatment, conc and uptake. A third dimension can be applied to the scatter plot through the color attribute. Only categorical variables are available for this attribute. Further, an option to fit a Loess smoother is provided to see the trend in each class of the color attribute. Moreover, an option to display the confidence band around this curve is also provided. A slider input is provided to change the size of the points in the plot. An interactive way to specify the title of the plot is also provided.
+    The first tab, Plot, makes a scatter plot using 5 input variables namely Plant, Type, Treatment, conc and uptake. A third dimension can be applied to the scatter plot through the color attribute. An option to apply facet to the scatter plot is provided. Only categorical variables are available for this attribute. Further, an option to choose between a Loess smoother and linear fit is provided to see the trend in each class of the color or facet attribute. An option to choose between a row and column facet is also available. A slider input is provided to change the size of the points in the plot. An interactive way to specify the title of the plot is also provided.
     </p>
     <p>
       The second tab, Hypothesis testing, does a t-test to compare the mean of CO2 uptake for the two subgroups in the variables Type and Treatment using Welch's 2 sample t-test. The data used in the test is also shown to help the user get an idea of the data.
